--- a/sass/components/_staff.scss
+++ b/sass/components/_staff.scss
@@ -73,7 +73,6 @@
 
       .professional{
         width: 100%;
-        padding: 0 5%;
         margin-bottom: 1.5rem;
 
         h3{
